--- a/client/src/sass/components/subscriber_list_form.scss
+++ b/client/src/sass/components/subscriber_list_form.scss
@@ -1,18 +1,108 @@
 .brandlogo {
     margin: 2.2rem auto;
 }
+.file-upload-wrapper {
+    position: relative;
+    display: flex;
+    // margin-bottom: 2.2rem;
+    justify-content: center;
+    // align-items: center;
+    label {
+        margin-bottom: 0;
+        border: 3px solid #BF74DA !important;
+        height: 80px;
+        width: 250px;
+        background-color: rgba(#994ed6, 0.3) !important;
+        z-index: 14;
+    }
+    .upload-button {
+        position: absolute;
+        top: 25%;
+        left: 47%;
+        z-index: 0;
+    }
+}
+
+.main-heading {
+    position: relative;
+    .fa-heart-1, .fa-heart-2, .fa-heart-3 {
+        color: rgb(221, 74, 74);
+        font-size: 22px;
+        position: absolute;
+        // right: 20%;
+        top: -6%;
+        transition: all 0.5s;
+        
+    }
+    .fa-heart-1 {
+        animation: heart1 6s cubic-bezier(.535,.15,.425,1) -2s infinite;
+    }
+    .fa-heart-2 {
+        animation: heart2 6s cubic-bezier(.535,.15,.425,1) -2s infinite;
+    }
+    .fa-heart-3 {
+        animation: heart3 6s cubic-bezier(.535,.15,.425,1) -2s infinite;
+    }
+    @keyframes heart1 {
+        0% {
+            opacity: 0;
+            transform: scale3d(.7,.7,.7) translate3d(-85%,60%,0) rotate(0);
+        }
+        50% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+            transform: scaleX(1) translate3d(-25%,-160%,0) rotate(-25deg);
+        }
+    }
+    @keyframes heart2 {
+        0% {
+            opacity: 0;
+            transform: scale3d(.7,.7,.7) translate3d(-45%,-80%,0) rotate(0);
+        }
+        50% {
+            opacity: 0.7;
+        }
+        100% {
+            opacity: 0;
+            transform: scaleX(1) translate3d(-25%,-80%,0) rotate(-25deg);
+        }
+    }
+    @keyframes heart3 {
+        0% {
+            opacity: 0;
+            transform: scale3d(.7,.7,.7) translateZ(0) rotate(0);
+        }
+        50% {
+            opacity: 0.9;
+        }
+        100% {
+            opacity: 0;
+            transform: scaleX(1) translate3d(25%,10%,0) rotate(35deg);
+        }
+    }
+}
+
 .subscriber-list-form {
-    background-color: #F1F1F1;
-    padding: 1.8rem;
+    background-color: #fcfcfc;
+    // padding: 1.8rem;
     border-radius: 0.6rem;
+    .homepage_cat {
+        margin: 1rem 0 2rem 0;
+        padding: 0.5rem;
+    }
     h1 {
         font-size: 44px;
         margin-bottom: 5rem;
     }   
     h3 {
-        font-size: 22px;
+        font-size: 25px;
         width: 89%;
-        margin: 3.5rem auto;
+        margin: 2rem auto;
+    }
+    h5 {
+        margin: 1.5rem auto;
     }
     input {
         border: none;
@@ -25,6 +115,12 @@
             color: #a8a8a8;
         }
     }
+    .form-bottom-row {
+        margin-top: 2rem !important;
+        background-color: #f1f1f1;
+        border-top: 1px solid rgba(black, 0.2);
+    }
+    
     button {
         margin: 2rem auto;
         width: 130px;
@@ -47,7 +143,7 @@
     //     margin-top: 3rem;
     // }
 
-        .fa-times {
+        .fa-times- {
             position: absolute;
             right: 22px;
             top: 12.3%;
@@ -61,12 +157,14 @@
         }
 
     .socialmedia-tag {
-        background-color: rgba(#c4c4c4, 0.22);
+        background-color: rgba(#e97373, 0.22);
         padding: 0.47rem;
         border-radius: 51px;
-        h5 {
+        margin-bottom: 1.3rem;
+        .socialmediah5-1 {
             font-size: 15px;
             text-align: center;
+            margin: 0.7rem auto;
         }
         h6 {
             text-align: center;
@@ -74,24 +172,57 @@
         span {
             padding: 0.14rem;
             color: #444;
-            background-color: #C0DADD;
+            background-color: #f8a0bb;
         }
     }
 
 }
 
-@media (max-width:500px) {
+@media (max-width:768px) {
+    .file-upload-wrapper {
+        label {
+            margin-bottom: 0;
+            height: 80px
+        }
+        .upload-button {
+            top: 25%;
+            left: 45.7%;
+        }
+    }
+}
 
+
+@media (max-width:500px) {
+    .file-upload-wrapper {
+
+        label {
+            margin-bottom: 0;
+            height: 80px;
+        }
+        .upload-button {
+            top: 10%;
+            margin: 0 auto;
+        }
+    }
+    
     .subscriber-list-form {
+        .homepage_cat {
+            margin: 1rem 0 2rem 0;
+            width: 73%;
+        }
         padding: 1.8rem;
         h1 {
             font-size: 29px;
             margin-bottom: 2rem;
         }   
         h3 {
-            font-size: 14px;
+            font-size: 21px;
             width: 96%;
             margin: 0 auto;
+        }
+        h5 {
+            margin: 1.4rem auto;
+            font-size: 15px;
         }
         input {
             border: none;
@@ -146,4 +277,45 @@
         }
     
     } 
+}
+
+@media (max-width:426px) {
+    .file-upload-wrapper {
+        label {
+            margin-bottom: 0;
+            height: 80px
+        }
+        .upload-button {
+            top: 25%;
+            left: 43%;
+        }
+    }
+}
+
+
+@media (max-width:376px) {
+    .file-upload-wrapper {
+        label {
+            margin-bottom: 0;
+            height: 80px
+        }
+        .upload-button {
+            top: 25%;
+            left: 41%;
+        }
+    }
+}
+
+
+@media (max-width:320px) {
+    .file-upload-wrapper {
+        label {
+            margin-bottom: 0;
+            height: 80px
+        }
+        .upload-button {
+            top: 25%;
+            left: 39.5%;
+        }
+    }
 }
