--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,2 +1,6 @@
+@import './variable.scss';
+
 @import './components/footer';
-@import './components/subscriber_list_form'
+@import './components/bottomRow';
+@import './components/subscriber_list_form';
+@import './components/landingpage';
