--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -2,5 +2,6 @@
 
 @import './components/footer';
 @import './components/bottomRow';
+@import './components/auth';
 @import './components/subscriber_list_form';
 @import './components/landingpage';
