--- a/client/src/sass/variable.scss
+++ b/client/src/sass/variable.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Yusei+Magic&display=swap');
 
 @font-face {
     font-family: britannic;
@@ -7,3 +7,4 @@
 
 $font-1:britannic;
 $font-2:Yusei Magic;
+$font-3:Roboto;
