added design card

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -5,3 +5,9 @@
 @import './components/auth';
 @import './components/subscriber_list_form';
 @import './components/landingpage';
+
+//navbar
+@import './components/navbar';
+
+//design cards
+@import './components/design_cards';
