--- a/client/src/sass/variable.scss
+++ b/client/src/sass/variable.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Yusei+Magic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces&display=swap');
 
 @font-face {
     font-family: britannic;
@@ -8,3 +9,4 @@
 $font-1:britannic;
 $font-2:Yusei Magic;
 $font-3:Roboto;
+$font-4:Fraunces;
