added dashboard UI (incomplete)

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -6,6 +6,9 @@
 @import './components/subscriber_list_form';
 @import './components/landingpage';
 
+//dashboard
+@import './components/dashboard';
+
 //navbar
 @import './components/navbar';
 
