--- a/client/src/sass/variable.scss
+++ b/client/src/sass/variable.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Yusei+Magic&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fraunces&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 @font-face {
     font-family: britannic;
@@ -10,3 +11,4 @@ $font-1:britannic;
 $font-2:Yusei Magic;
 $font-3:Roboto;
 $font-4:Fraunces;
+$font-5:Poppins;
