--- a/client/src/sass/components/_navbar.scss
+++ b/client/src/sass/components/_navbar.scss
@@ -121,8 +121,8 @@
             // font-weight: 600;
         }
 
-        .fa-bell {
-            padding: 0.75rem 0 0 0.4rem;
+        .fa-inbox {
+            // margin: 0.6rem 0 0 0.4rem;
             &:hover {
                 cursor: pointer;
             }
@@ -152,7 +152,7 @@
                 pointer-events: none;
                 transform: translateY(3.3rem);
                 width: 120px;
-                right: 0;
+                right: 5%;
                 transition: all 0.3s ease;
                 background-color:white;
                 box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
@@ -186,7 +186,7 @@
                 transform: translateY(2.5rem);
                 border-radius: 0.2rem;
                 width: 120px;
-                right: 0;
+                right: 5%;
                 ul {
                     background-color: white;
                     list-style-type: none;
@@ -217,12 +217,51 @@
 
     }
 }
+.notify_box {
+        
+    .fa-inbox {
+        color: grey;
+        font-size: 23px;
+        padding: 0.6rem;
+        border-radius: 50%;
+        color: #25a2c2;
+        &:hover {
+            background-color: #f5f5f5;
+        }
+    }
+    .notification_box {
+        animation: notifyBox 0.3s alternate;
+        position: absolute;
+        right: 0%;
+        margin-top: 1rem;
+        height: 23.5rem;
+        width: 20rem;
+        overflow: auto;
+        background-color: rgba(white, 1);
+        border-radius: 0.3rem;
+        // z-index: 0;
+        transition: all 0.3s ease;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
+
+    //notification box animation
+    @keyframes notifyBox {
+        from {
+            opacity: 0;
+            margin-top: 2rem;
+        }
+        to {
+            opacity: 1;
+            margin-top: 1rem;
+        }
+    }
+}
 .icon-bar {
-    width: 2.2rem;
-    height: 0.25rem;
+    width: 2rem;
+    height: 0.15rem;
     margin: 0.3rem;
     border-radius: 6px;
-    background-color: #3e3e3e;
+    background-color: #6e6e6e;
     display: block;
     transition: all 0.2s;
     margin-top: 4px
