--- a/client/src/sass/components/_dashboard.scss
+++ b/client/src/sass/components/_dashboard.scss
@@ -33,9 +33,9 @@
                 background-color: rgb(247, 247, 247);
                 box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
             }
-            &:focus {
-                box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 2px 0px, rgba(14, 30, 37, 0.32) 0px 2px 8px 0px;
-            }
+            // &:focus {
+            //     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 2px 0px, rgba(14, 30, 37, 0.32) 0px 2px 8px 0px;
+            // }
         }
     }
 
