--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -9,8 +9,23 @@
 //dashboard
 @import './components/dashboard';
 
+//dropdown
+@import './components/dropdown';
+
 //navbar
 @import './components/navbar';
+
+//banner carousel
+@import './components/banner-carousel';
+
+//creator special
+@import './components/creator-special';
+
+//highest rating
+@import './components/highest-rating';
+
+//product quality
+@import './components/product-quality';
 
 //design cards
 @import './components/design_cards';
